Add multi-step decision flow with rule-based logic

--- a/index.html
+++ b/index.html
@@ -1,25 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Decision Fatigue Simulator</title>
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Decision Fatigue Simulator</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
 
-  <div class="app">
-    <h1>Decision Fatigue Simulator</h1>
-    <p id="subtitle">When thinking feels illegal</p>
+    <div class="app">
+        <h1>Decision Fatigue Simulator</h1>
+        <p id="subtitle">When thinking feels illegal</p>
 
-    <div id="step">
-      <input type="text" id="questionInput" placeholder="What are you stuck on?" />
-      <button id="startBtn">Decide for me</button>
+        <div id="step">
+            <p id="questionText">What are you stuck on?</p>
+            <input type="text" id="questionInput" placeholder="Type your decision here" />
+            <button id="nextBtn">Next</button>
+        </div>
+
+        <div id="options" class="hidden"></div>
+        <div id="result" class="hidden"></div>
+
+
+        <div id="result" class="hidden"></div>
     </div>
 
-    <div id="result" class="hidden"></div>
-  </div>
-
-  <script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
